@@ -1,6 +1,6 @@
 Package: optextras
-Version: 2017-11.25
-Date: 2017-11-25
+Version: 2018-3.28
+Date: 2017-03-28
 Title: Tools to Support Optimization Possibly with Bounds and Masks
 Authors@R: c( person(given = c("John", "C"), family = "Nash", 
         role =c("aut", "cre"), email = "nashjc@uottawa.ca") )
@@ -16,4 +16,5 @@ Description: Tools to assist in safely applying user generated objective and
    Includes forward, central and backward gradient approximation codes.
 License: GPL-2
 Depends: numDeriv
+Suggests: optimx
 
