@@ -68,7 +68,45 @@ At the time of preparation, there are no checks for validity of the gradient cod
 }
 
 \examples{
-# Want examples of success and failure. What about "near misses"??
+# Would like examples of success and failure. What about "near misses"??
+cat("Show how grchk works\n")
+require(optextras)
+require(numDeriv)
+# require(optimx)
+
+jones<-function(xx){
+  x<-xx[1]
+  y<-xx[2]
+  ff<-sin(x*x/2 - y*y/4)*cos(2*x-exp(y))
+  ff<- -ff
+}
+
+jonesg <- function(xx) {
+  x<-xx[1]
+  y<-xx[2]
+  gx <-  cos(x * x/2 - y * y/4) * ((x + x)/2) * cos(2 * x - exp(y)) - 
+    sin(x * x/2 - y * y/4) * (sin(2 * x - exp(y)) * 2)
+  gy <- sin(x * x/2 - y * y/4) * (sin(2 * x - exp(y)) * exp(y)) - cos(x * 
+                                                                        x/2 - y * y/4) * ((y + y)/4) * cos(2 * x - exp(y))
+  gg <- - c(gx, gy)
+}
+
+jonesg2 <- function(xx) {
+  gx <- 1
+  gy <- 2
+  gg <- - c(gx, gy)
+}
+
+
+xx <- c(1, 2)
+
+gcans <- grchk(xx, jones, jonesg, trace=1, testtol=(.Machine$double.eps)^(1/3))
+gcans
+
+gcans2 <- grchk(xx, jones, jonesg2, trace=1, testtol=(.Machine$double.eps)^(1/3))
+gcans2
+
+
 
 
 }
